Fix spacing around h1
- add the space to main to separate between breadcrumbs and main content.

Relates to MT-168

--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -131,6 +131,10 @@ $content-spacer: $spacer-x-small !default;
     margin-top: var(--content-spacer);
   }
 
+  > main {
+    margin-top: var(--spacer-large);
+  }
+
   > * + h2,
   > * + h3,
   > h3,
